--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>React Hot Redux Firebase Starter</title>
   </head>
   <body>
-    <div id='root'>
-    </div>
-    <script src="./bundle.js"></script>
+    <div id='root'></div>
   <script type="text/javascript" src="bundle.js"></script></body>
 </html>
